--- a/Samples/Query/Components/cosmosdb.yaml
+++ b/Samples/Query/Components/cosmosdb.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: cosmosdb
+  name: cosmosdbapp
   namespace: default
 spec:
   type: state.azure.cosmosdb
